--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
         style="background-image: url('img/hero/hero.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <div class="absolute inset-0 bg-black bg-opacity-40"></div>
         <div class="absolute inset-0 bg-gradient-to-l from-black/15 to-transparent"></div>
+        <div class="absolute bottom-0 left-0 right-0 h-40 bg-gradient-to-t from-[#470308] to-transparent opacity-100"></div>
         <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center pt-40">
                 <h1 class="text-5xl md:text-6xl font-bold mb-8 leading-tight">
@@ -222,14 +223,14 @@
         </div>
 
         <!-- About Section -->
-        <div style="padding-top: 95px;padding-bottom: 205px; overflow: auto;" id="about" class="mb-20">
+        <div style="padding-top: 55px;padding-bottom: 205px; overflow: auto;" id="about" class="mb-20">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="grid lg:grid-cols-2 gap-16 items-center">
                     <div class="relative about-images">
-                        <img src="img/about/new.png" class="rounded-3xl w-full scale-[2.5] about-img-1" alt="Office">
+                        <img src="img/about/new.png" class="rounded-3xl w-full scale-[2.2] about-img-1" alt="Office">
                     </div>
 
-                    <div class="about-content relative z-10">
+                    <div class="about-content relative z-10 pt-20 lg:pt-0">
                         <span class="text-primary-600 font-bold tracking-widest uppercase text-sm about-badge">مرحباً
                             بكم</span>
                         <h2 class="text-4xl md:text-5xl font-bold text-gray-900 mt-4 mb-6 leading-snug about-title">
@@ -243,7 +244,7 @@
 
 
                         <!-- Experience Stats -->
-                        <div class="flex items-start gap-8 mb-8 stats-container">
+                        <div class="flex items-center justify-center gap-8 mb-8 stats-container">
                             <div class="flex-shrink-0 stats-number">
                                 <div class="text-7xl font-bold text-cinnabar-500 mb-2 leading-none relative">
                                     <span
@@ -371,7 +372,8 @@
                 <div class="flex flex-col lg:flex-row-reverse gap-12 items-center">
                     <!-- Image Section -->
                     <div class="order-2 lg:order-1 w-full lg:w-[35%] why-us-image-container">
-                        <img src="img/why-us/service-left-img.png" alt="منتجاتنا" class="w-full h-auto">
+                        <img src="img/why-us/service-left-img-mobile.png" alt="منتجاتنا" class="w-full h-auto block md:hidden">
+                        <img src="img/why-us/service-left-img.png" alt="منتجاتنا" class="w-full h-auto hidden md:block">
                     </div>
 
                     <!-- Content Section -->
@@ -510,7 +512,7 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
                 <div class="text-center mb-16">
                     <h2 class="text-4xl font-bold text-white mb-4">منتجاتنا</h2>
-                    <p class="text-xl text-slate-300 max-w-3xl mx-auto">
+                    <p class="text-xl text-slate-300 max-w-3xl mx-auto text-center">
                         مجموعة متنوعة من الدهانات عالية الجودة لتلبي جميع احتياجاتك
                     </p>
                 </div>
@@ -635,11 +637,11 @@
         <div id="tools" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-20 relative z-10">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-white mb-4">الأدوات</h2>
-                <p class="text-xl text-slate-300 max-w-3xl mx-auto">
+                <p class="text-xl text-slate-300 max-w-3xl mx-auto text-center">
                     أدوات مفيدة لمساعدتك في اختيار وتطبيق الدهانات
                 </p>
             </div>
-            <div class="grid md:grid-cols-3 gap-8">
+            <div class="grid md:grid-cols-3 gap-8 ">
                 <div
                     class="bg-black/40 backdrop-blur-sm p-8 rounded-2xl group transition-all duration-300 transform hover:-translate-y-2 border border-cinnabar-500/30 hover:border-cinnabar-400/50 text-center">
                     <div
@@ -651,7 +653,7 @@
                         </svg>
                     </div>
                     <h3 class="text-xl font-bold text-white mb-4">آلة حاسبة</h3>
-                    <p class="text-gray-300 leading-relaxed mb-6">احسب كمية الدهان المطلوبة لمشروعك بدقة</p>
+                    <p class="text-gray-300 leading-relaxed mb-6 text-center" >احسب كمية الدهان المطلوبة لمشروعك بدقة</p>
                     <a href="https://ubmcgroup.com/sipes/ar/أله-حاسبة/" target="_blank"
                         class="inline-block bg-gradient-to-r from-cinnabar-600 to-primary-700 hover:from-cinnabar-500 hover:to-primary-600 text-white py-3 px-6 rounded-lg font-semibold transition-all">استخدم
                         الآلة</a>
@@ -668,7 +670,7 @@
                         </svg>
                     </div>
                     <h3 class="text-xl font-bold text-white mb-4">كتالوج الألوان</h3>
-                    <p class="text-gray-300 leading-relaxed mb-6">استعرض مجموعة واسعة من الألوان المتاحة</p>
+                    <p class="text-gray-300 leading-relaxed mb-6 text-center">استعرض مجموعة واسعة من الألوان المتاحة</p>
                     <a href="https://ubmcgroup.com/sipes/ar/كتالوج-الألوان/" target="_blank"
                         class="inline-block bg-gradient-to-r from-cinnabar-600 to-primary-700 hover:from-cinnabar-500 hover:to-primary-600 text-white py-3 px-6 rounded-lg font-semibold transition-all">عرض
                         الكتالوج</a>
@@ -685,7 +687,7 @@
                         </svg>
                     </div>
                     <h3 class="text-xl font-bold text-white mb-4">تلوين الغرف</h3>
-                    <p class="text-gray-300 leading-relaxed mb-6">جرب الألوان على غرفتك قبل الطلاء</p>
+                    <p class="text-gray-300 leading-relaxed mb-6 text-center">جرب الألوان على غرفتك قبل الطلاء</p>
                     <a href="https://ubmcgroup.com/sipes/ar/تلوين-الغرف/" target="_blank"
                         class="inline-block bg-gradient-to-r from-cinnabar-600 to-primary-700 hover:from-cinnabar-500 hover:to-primary-600 text-white py-3 px-6 rounded-lg font-semibold transition-all">جرب
                         الآن</a>
@@ -1008,7 +1010,7 @@
 
         <!-- Scroll To Top Button -->
         <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' })"
-            class="fixed bottom-6 right-6 w-12 h-12 bg-gradient-to-r from-primary-500 to-cinnabar-600 hover:from-primary-600 hover:to-cinnabar-700 rounded-full flex items-center justify-center text-white transition-all transform hover:scale-110 shadow-lg">
+            class="z-40 fixed bottom-6 right-6 w-12 h-12 bg-gradient-to-r from-primary-500 to-cinnabar-600 hover:from-primary-600 hover:to-cinnabar-700 rounded-full flex items-center justify-center text-white transition-all transform hover:scale-110 shadow-lg">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18">
                 </path>
