--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
         style="background-image: url('img/hero/hero.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <div class="absolute inset-0 bg-black bg-opacity-40"></div>
         <div class="absolute inset-0 bg-gradient-to-l from-black/15 to-transparent"></div>
-        <div class="absolute bottom-0 left-0 right-0 h-40 bg-gradient-to-t from-[#470308] to-transparent opacity-100"></div>
+        <div class="absolute bottom-0 left-0 right-0 h-40 bg-gradient-to-t from-[#470308] to-transparent opacity-100">
+        </div>
         <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center pt-40">
                 <h1 class="text-5xl md:text-6xl font-bold mb-8 leading-tight">
@@ -238,7 +239,8 @@
                                 class="bg-gradient-to-r from-cinnabar-400 to-primary-600 bg-clip-text text-transparent">الألوان</span>
                         </h2>
                         <p class="text-lg text-gray-600 mb-8 leading-relaxed about-text">
-                            سايبس – فرع ليبيا هي شركة متخصصة في الدهانات والطلاءات المعمارية والصناعية، نعمل على توفير
+                            شركة سايبس – ليبيا المشتركة هي شركة متخصصة في الدهانات والطلاءات المعمارية والصناعية، نعمل
+                            على توفير
                             حلول متكاملة تجمع بين جودة الخامات ودقة التصنيع وتنوّع الألوان.
                         </p>
 
@@ -372,7 +374,8 @@
                 <div class="flex flex-col lg:flex-row-reverse gap-12 items-center">
                     <!-- Image Section -->
                     <div class="order-2 lg:order-1 w-full lg:w-[35%] why-us-image-container">
-                        <img src="img/why-us/service-left-img-mobile.png" alt="منتجاتنا" class="w-full h-auto block md:hidden">
+                        <img src="img/why-us/service-left-img-mobile.png" alt="منتجاتنا"
+                            class="w-full h-auto block md:hidden">
                         <img src="img/why-us/service-left-img.png" alt="منتجاتنا" class="w-full h-auto hidden md:block">
                     </div>
 
@@ -384,7 +387,8 @@
                                 تختارنا؟</span>
                         </div>
                         <h2 class="text-4xl lg:text-5xl font-bold text-gray-900 mb-8 leading-tight">
-                            لماذا تختار دهانات <span class="bg-gradient-to-r from-cinnabar-400 to-primary-600 bg-clip-text text-transparent">سايبس؟</span>
+                            لماذا تختار دهانات <span
+                                class="bg-gradient-to-r from-cinnabar-400 to-primary-600 bg-clip-text text-transparent">سايبس؟</span>
                         </h2>
 
                         <!-- Services Grid -->
@@ -653,7 +657,7 @@
                         </svg>
                     </div>
                     <h3 class="text-xl font-bold text-white mb-4">آلة حاسبة</h3>
-                    <p class="text-gray-300 leading-relaxed mb-6 text-center" >احسب كمية الدهان المطلوبة لمشروعك بدقة</p>
+                    <p class="text-gray-300 leading-relaxed mb-6 text-center">احسب كمية الدهان المطلوبة لمشروعك بدقة</p>
                     <a href="https://ubmcgroup.com/sipes/ar/أله-حاسبة/" target="_blank"
                         class="inline-block bg-gradient-to-r from-cinnabar-600 to-primary-700 hover:from-cinnabar-500 hover:to-primary-600 text-white py-3 px-6 rounded-lg font-semibold transition-all">استخدم
                         الآلة</a>
@@ -752,7 +756,7 @@
                 <h3 class="text-2xl font-bold text-primary-900">الفروع القريبة منك</h3>
             </div>
 
-            <div class="grid md:grid-cols-3 gap-6 branches-grid">
+            <div class="grid md:grid-cols-2 gap-6 branches-grid">
                 <!-- Branch 1 - Misrata -->
                 <div class="p-4 rounded-xl border-2 border-gray-200 hover:shadow-lg transition-shadow branch-card animate-fade-in-up"
                     style="background-color: rgb(245 245 245 / 44%); animation-delay: 0.1s;" dir="rtl">
@@ -765,10 +769,12 @@
                                 </path>
                             </svg>
                         </div>
-                        <h4 class="text-lg font-bold text-gray-900">فرع مصراتة</h4>
+                        <h4 class="text-lg font-bold text-gray-900">ادارة الشركة </h4>
                     </div>
                     <div class="space-y-3 text-right">
-                        <p class="text-sm text-gray-600 leading-relaxed">طريق السوق، المنطقة التجارية، مصراتة، ليبيا</p>
+                        <p class="text-sm text-gray-600 leading-relaxed">
+                            طرابلس حي الاندلس - بالقرب من مستشفى الرازي
+                        </p>
                         <div class="flex items-center justify-start gap-2 text-blue-600 font-medium">
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -783,7 +789,20 @@
                                     d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
                                 </path>
                             </svg>
-                            <span>misrata@sipes.ly</span>
+                            <span>
+                                <a href="mailto:info.libya@sipes.net">info.libya@sipes.net</a>
+                            </span>
+                        </div>
+                        <div class="flex items-center justify-start gap-2 text-blue-600 font-medium">
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z">
+                                </path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                            </svg>
+                            <a href="https://www.google.com/maps?q=32.876068115234375,13.134833335876465&z=17&hl=en"
+                                target="_blank" class="hover:underline">عرض على الخريطة</a>
                         </div>
                     </div>
                 </div>
@@ -793,7 +812,7 @@
                     dir="rtl">
                     <div
                         class="absolute -top-3 left-1/2 transform -translate-x-1/2 bg-primary-600 text-white px-4 py-1 rounded-full text-sm font-bold">
-                        الفرع الرئيسي
+                        موقع المصنع
                     </div>
                     <div class="flex items-center justify-start gap-3 mb-3 mt-2">
                         <div
@@ -804,18 +823,21 @@
                                 </path>
                             </svg>
                         </div>
-                        <h4 class="text-xl font-bold text-primary-900">فرع طرابلس المركزي</h4>
+                        <h4 class="text-xl font-bold text-primary-900">المصنع</h4>
                     </div>
                     <div class="space-y-3 text-right">
-                        <p class="text-sm text-gray-700 leading-relaxed font-medium">الشارع الرئيسي، المنطقة التجارية،
-                            طرابلس، ليبيا</p>
+                        <p class="text-sm text-gray-700 leading-relaxed font-medium">
+                            شركة سايبس ليبيا لصناعة الطلاء - الزاوية الطريق الساحلي
+                        </p>
                         <div class="flex items-center justify-start gap-2 text-primary-700 font-semibold">
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
                                 </path>
                             </svg>
-                            <span>1234567 21 218+</span>
+                            <span>
+                                <a href="tel:+00218925930003">92-5930003 00218+</a>
+                            </span>
                         </div>
                         <div class="flex items-center justify-start gap-2 text-primary-700 font-semibold">
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -823,46 +845,24 @@
                                     d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
                                 </path>
                             </svg>
-                            <span>tripoli@sipes.ly</span>
+                            <span><a href="mailto:info.libya@sipes.net">info.libya@sipes.net</a></span>
+                        </div>
+                        <div class="flex items-center justify-start gap-2 text-primary-700 font-semibold">
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z">
+                                </path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                            </svg>
+                            <a href="https://www.google.com/maps/place/32%C2%B045'29.4%22N+12%C2%B044'58.3%22E/@32.7581787,12.7469406,17z/data=!3m1!4b1!4m4!3m3!8m2!3d32.7581787!4d12.7495155?hl=en&entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3MUgBUAM%3D"
+                                target="_blank" class="hover:underline">عرض على الخريطة</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Branch 3 - Benghazi -->
-                <div class="p-4 rounded-xl border-2 border-gray-200 hover:shadow-lg transition-shadow branch-card"
-                    style="background-color: rgb(245 245 245 / 44%);" dir="rtl">
-                    <div class="flex items-center justify-start gap-3 mb-3">
-                        <div class="w-10 h-10 rounded-xl flex items-center justify-center"
-                            style="background-color: rgb(237 28 36);">
-                            <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4">
-                                </path>
-                            </svg>
-                        </div>
-                        <h4 class="text-lg font-bold text-gray-900">فرع بنغازي</h4>
-                    </div>
-                    <div class="space-y-3 text-right">
-                        <p class="text-sm text-gray-600 leading-relaxed">شارع جمال عبد الناصر، مركز المدينة التجاري، وسط
-                            المدينة، بنغازي، ليبيا</p>
-                        <div class="flex items-center justify-start gap-2 text-blue-600 font-medium">
-                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
-                                </path>
-                            </svg>
-                            <span>2345678 61 218+</span>
-                        </div>
-                        <div class="flex items-center justify-start gap-2 text-blue-600 font-medium">
-                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
-                                </path>
-                            </svg>
-                            <span>benghazi@sipes.ly</span>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
@@ -885,22 +885,11 @@
                         احتياجاتكم.
                     </p>
                     <div class="flex space-x-4 space-x-reverse">
-                        <a href="#"
+                        <a href="https://www.facebook.com/share/1CXKLnvXPQ/"
                             class="w-10 h-10 bg-white/10 hover:bg-white/20 rounded-full flex items-center justify-center transition-colors">
                             <span class="text-sm font-bold">f</span>
                         </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-white/10 hover:bg-white/20 rounded-full flex items-center justify-center transition-colors">
-                            <span class="text-sm font-bold">t</span>
-                        </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-white/10 hover:bg-white/20 rounded-full flex items-center justify-center transition-colors">
-                            <span class="text-sm font-bold">i</span>
-                        </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-white/10 hover:bg-white/20 rounded-full flex items-center justify-center transition-colors">
-                            <span class="text-sm font-bold">w</span>
-                        </a>
+
                     </div>
                 </div>
 
@@ -908,26 +897,22 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4 text-primary-200">منتجاتنا</h4>
                     <ul class="space-y-3 text-sm">
-                        <li><a href="#"
+                        <li><a href="https://ubmcgroup.com/sipes/ar/%D8%A7%D9%84%D8%B3%D9%88%D9%82/"
                                 class="text-gray-300 hover:text-white transition-colors flex items-center gap-2">
                                 <span class="w-2 h-2 bg-primary-400 rounded-full"></span>
                                 الدهانات الداخلية
                             </a></li>
-                        <li><a href="#"
+                        <li><a href="https://ubmcgroup.com/sipes/ar/%D8%A7%D9%84%D8%B3%D9%88%D9%82/"
                                 class="text-gray-300 hover:text-white transition-colors flex items-center gap-2">
                                 <span class="w-2 h-2 bg-primary-400 rounded-full"></span>
                                 الدهانات الخارجية
                             </a></li>
-                        <li><a href="#"
+                        <li><a href="https://ubmcgroup.com/sipes/ar/%D8%A7%D9%84%D8%B3%D9%88%D9%82/"
                                 class="text-gray-300 hover:text-white transition-colors flex items-center gap-2">
                                 <span class="w-2 h-2 bg-primary-400 rounded-full"></span>
                                 العناية بالأخشاب
                             </a></li>
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-white transition-colors flex items-center gap-2">
-                                <span class="w-2 h-2 bg-primary-400 rounded-full"></span>
-                                الدهانات الصناعية
-                            </a></li>
+
                     </ul>
                 </div>
 
@@ -935,22 +920,22 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4 text-primary-200">خدماتنا</h4>
                     <ul class="space-y-3 text-sm">
-                        <li><a href="#"
+                        <li><a href="https://ubmcgroup.com/sipes/ar/%D9%83%D8%AA%D8%A7%D9%84%D9%88%D8%AC-%D8%A7%D9%84%D8%A3%D9%84%D9%88%D8%A7%D9%86/"
                                 class="text-gray-300 hover:text-white transition-colors flex items-center gap-2">
                                 <span class="w-2 h-2 bg-cinnabar-400 rounded-full"></span>
                                 استشارة الألوان
                             </a></li>
-                        <li><a href="#"
+                        <li><a href="https://ubmcgroup.com/sipes/ar/%D8%A3%D9%84%D9%87-%D8%AD%D8%A7%D8%B3%D8%A8%D8%A9/"
                                 class="text-gray-300 hover:text-white transition-colors flex items-center gap-2">
                                 <span class="w-2 h-2 bg-cinnabar-400 rounded-full"></span>
                                 حاسبة الدهان
                             </a></li>
-                        <li><a href="#"
+                        <li><a href="https://ubmcgroup.com/sipes/ar/%D8%AA%D9%84%D9%88%D9%8A%D9%86-%D8%A7%D9%84%D8%BA%D8%B1%D9%81/"
                                 class="text-gray-300 hover:text-white transition-colors flex items-center gap-2">
                                 <span class="w-2 h-2 bg-cinnabar-400 rounded-full"></span>
                                 التطبيق المهني
                             </a></li>
-                        <li><a href="#"
+                        <li><a href="mailto:info.libya@sipes.net"
                                 class="text-gray-300 hover:text-white transition-colors flex items-center gap-2">
                                 <span class="w-2 h-2 bg-cinnabar-400 rounded-full"></span>
                                 الدعم الفني
@@ -982,7 +967,9 @@
                                     </path>
                                 </svg>
                             </div>
-                            <span>+218 21 1234567</span>
+                            <span>
+                                <a href="tel:+00218925930003">92-5930003 00218+</a>
+                            </span>
                         </div>
                         <div class="flex items-center gap-3">
                             <div class="w-8 h-8 bg-white/10 rounded-lg flex items-center justify-center">
@@ -992,7 +979,9 @@
                                     </path>
                                 </svg>
                             </div>
-                            <span>info@sipes.ly</span>
+                            <span>
+                                <a href="mailto:info.libya@sipes.net">info.libya@sipes.net</a>
+                            </span>
                         </div>
                     </div>
                 </div>
